<?xml version="1.0"?>
<package>
  <name>rvmonitor_node</name>
  <version>1.0.0</version>
  <description>RV Monitor</description>

  <maintainer email="mop@cs.uiuc.edu">FSL@UIUC</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
